<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_app_settings_title"
        android:title="@string/pref_app_settings_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_location"
            android:summary="@string/pref_location_summ"
            android:title="@string/pref_location" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_hide_action_bar"
            android:summary="@string/pref_hide_action_bar_summ"
            android:title="@string/pref_hide_action_bar" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_about_title"
        android:title="@string/pref_about_title" >
        <Preference
            android:key="pref_source_code"
            android:summary="@string/pref_source_code_summ"
            android:title="@string/pref_source_code" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Skylark95/Facebook-Web" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>